syntax = "proto3";

package calcapp.grpc.operator;

option go_package = "calcapp/api/operator";


service OperatorService {
  rpc Operate(OperateRequest) returns (OperateResponse) {}
}

message OperateRequest {
  repeated double inputs = 1;
  repeated OperateResult results = 2;
}

message OperateResponse {
  OperateResponseStatus status = 1;
}


message OperateResult {
    string operator = 1;
    double value = 2;
}

enum OperateResponseStatus {
    UNKNOWN = 0;
    OK = 1;
    NG = 2;
}